// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmModal renders correctly hidden state 1`] = `null`;

exports[`ConfirmModal renders correctly loading state 1`] = `
<div
  className="css-18615gn"
  onMouseDown={[Function]}
>
  <div
    className="css-xynqqq"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <h2
      className="css-34jfdi"
    >
      Please confirm
    </h2>
    <svg
      className="css-pjnldn"
      onClick={[MockFunction]}
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#close"
      />
    </svg>
    <div
      className="css-i9gxme"
    >
      Removing user John Appleseed
    </div>
    <div
      className="css-vtqncq"
    >
      <div
        className="css-99wgdf"
      >
        <div
          className="css-12ibiio"
        >
          <button
            className="css-1oap1v"
            onClick={[MockFunction]}
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          className="css-12ibiio"
        >
          <button
            className="css-1dd4cey"
            onClick={[MockFunction]}
            type="button"
          >
            Remove
            <div
              className="css-9lvo7z"
            >
              <svg
                className="css-2ujzs2"
                viewBox="0 0 128 128"
              >
                <use
                  xlinkHref="#icon-spinner"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      className="css-vnc1z7"
      onFocus={[Function]}
      tabIndex="0"
    />
  </div>
</div>
`;

exports[`ConfirmModal renders correctly visible state 1`] = `
<div
  className="css-18615gn"
  onMouseDown={[Function]}
>
  <div
    className="css-xynqqq"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <h2
      className="css-34jfdi"
    >
      Please confirm
    </h2>
    <svg
      className="css-pjnldn"
      onClick={[MockFunction]}
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#close"
      />
    </svg>
    <div
      className="css-i9gxme"
    >
      Removing user John Appleseed
    </div>
    <div
      className="css-vtqncq"
    >
      <div
        className="css-99wgdf"
      >
        <div
          className="css-12ibiio"
        >
          <button
            className="css-1oap1v"
            onClick={[MockFunction]}
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          className="css-12ibiio"
        >
          <button
            className="css-8qjt25"
            onClick={[MockFunction]}
            type="button"
          >
            Remove
          </button>
        </div>
      </div>
    </div>
    <div
      className="css-vnc1z7"
      onFocus={[Function]}
      tabIndex="0"
    />
  </div>
</div>
`;
